--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -37,6 +37,7 @@
                 <div class="form-control">
                     <input type="password" name="password" placeholder="Password" id="pwd">
                 </div>
+                    <input type="hidden" id='csrf' name="_csrf" value={{ csrfToken }}>
                 <input type="submit" name="submit" value="submit" class="btn" id="submitLogin">
                 <a href='loader/../auth/google' class="btn red darken-1">
                     <i class="fab fa-google left" style="padding-right: 10px;"></i>Login with Google
