--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -24,7 +24,7 @@
                     <input type="text" name="userName" placeholder="Username" id="usr">
                 </div>
                 <div class="form-control">
-                    <input type="email" name="email" placeholder="Email" id="usr">
+                    <input type="email" name="email" placeholder="Email" id="eml">
                 </div>
                 <div class="form-control">
                     <input type="password" name="password" placeholder="Password" id="pwd">
@@ -33,7 +33,8 @@
                     <input type="checkbox" name="isAdmin" value='true' placeholder=id="isAdmin">
                     <label for="isAdmin">isAdmin</label>
                 </div>
-                <input type="submit" name="submit" value="submit" class="btn" id="submitLogin">
+                <input type="hidden" id='csrf' name="_csrf" value={{ csrfToken }}>
+                <input type="submit" name="submit" value="submit" class="btn" id="submitRegister">
             </fieldset>
         </form>
     </section>
